--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "@types/node": "^12.12.40",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "chrono-node": "^1.4.6",
+    "modus-ui": "0.0.15",
+    "moment": "^2.25.3",
+    "paymaya-js-sdk": "^2.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-select": "^3.1.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
